--- a/index.html
+++ b/index.html
@@ -3,6 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Наличие Tutis б/у</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff;
+            color: #333;
+            text-align: center;
+            padding: 40px;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 16px;
+            line-height: 1.6;
+            color: #888;
+            max-width: 800px;
+            margin: 0 auto 20px auto;
+        }
+        .heart {
+            color: red;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Наличие Tutis б/у</h1>
+
+    <p>
+        Выбрать и купить действительно хорошую б/у коляску непросто, кроме красоты коляски и внешнего вида важно разбираться в технических нюансах, а их там очень много.
+        Если вы хотите наслаждаться прогулками с коляской, то напишите мне, и я подберу Вам идеальную коляску с учетом Ваших пожеланий и своего колоссального опыта.
+        Коляски с которыми я работаю проходят тщательную проверку на техническую исправность и полную подготовку, включая химчистку.
+    </p>
+
+    <p>
+        Стоимость на наши коляски б/у составляет ориентировочно -30% от стоимости новых.
+        Все цены указаны за комплект 2 в 1, так как автолюльки у нас продаются отдельно.
+        Воспользуйтесь фильтром по моделям. Для вашего удобства я добавила описание ключевых отличий каждой модели <span class="heart">❤️</span>
+    </p>
+
+</body>
+
+  
   <title>Галерея товаров</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
